[tool.poetry]
name = "metrics-dash-backend-tools"
version = "0.1.0"
description = "Backend tools for the DSACMS OSPO metrics dashboard"
authors = ["Isaac Milarsky <isaac.milarsky@hhs.cms.gov>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
